# emberlane

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  ROADMAP.md  SECURITY.md  emberlane.example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
aws/inf2-runtime/: Dockerfile.neuron  README.md  bootstrap.sh  healthcheck.sh  models.yaml  start-server.sh
aws/lambda-bridge/: README.md  app.py  env.example  sample-event.json  template.yaml
aws/lambda-bridge-node/: README.md  index.mjs  package.json  template.yaml
aws/scripts/: check-asg.sh  deploy-dev.sh  destroy-dev.sh  scale-down.sh  smoke-test-lambda.sh  smoke-test-streaming.sh  wait-for-health.sh
docs/: aider.md  api-stability.md  api.md  architecture.md  aws-cuda-vllm.md  aws-deploy-from-zero.md  aws-end-to-end.md  aws-inf2-neuron.md  aws-wakebridge.md  cleanup-notes.md  completeness-checklist.md  cost-modes.md  future-clouds.md  github-topics.md  inf2-runtime.md  live-aws-testing.md  mcp.md  model-policy.md  model-profiles.md  providers.md  release-checklist.md  roadmap.md  s3-artifact-store.md
docs/roadmap/: experimental-ideas.md  future-work.md
examples/echo-runtime/: README.md  server.py
profiles/: models.toml
src/: cloud_tests.rs  config.rs  error.rs  files.rs  inf2_pack_tests.rs  main.rs  mcp.rs  model.rs  provider.rs  router.rs  server.rs  storage.rs  terraform_pack_tests.rs  test_harness.rs  util.rs
tests/: aws-matrix.example.toml
(+37 files in other folders)
