[package]
name = "emberlane"
version = "0.3.9"
edition = "2021"
description = "Open-source wake routing for AI agents, MCP tools, APIs, and cold runtimes."
license = "MIT"
repository = "https://github.com/emberlane/emberlane"
readme = "README.md"
keywords = ["ai", "gateway", "mcp", "router", "runtime"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "5"
http = "1"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
